# c3jepa-wm

./: .gitignore  core.html  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
c3jepa_wm/: _modidx.py  core.py  utils.py
c3jepa_wm/data/: collect.py  data_module.py  dataset.py  datasets.py  loaders.py  transforms.py  utils.py  vae_datasets.py
c3jepa_wm/evaluators/: control.py  jepa.py  world_model.py
c3jepa_wm/loggers/: base.py  (+1 more)
configs/: config.yaml
jobs/: collect.sh  vqvae.sh  vqvae_puhti.sh
mains/: collect.py  eval.py  le-wmeval.py  main.py  merge_h5.py  train.py  vq_main copy 2.py  vq_main copy.py  vq_main.py
nbs/: 00_core.ipynb  00b1_data.vae_dataset.ipynb  01a_data.collect.ipynb  01a_data.datasets.ipynb  01a_data.generate_data.ipynb  01b_data.dataset.ipynb  01b_data.transforms.ipynb  01c_data.data_module.ipynb  01c_data.utils.ipynb  01d_data.utils.ipynb  02a_models.msg_net.ipynb  02b_models.powernet.ipynb  02c_models.jepa.ipynb  02c_models.lewm.ipynb  04_utils.ipynb  04a_optimizers.utils.ipynb  04b_optimizers.scheduler.ipynb  05a_trainers.msg_trainer.ipynb  05b_trainers.control.ipynb  05b_trainers.msg_trainer.ipynb  05c_trainers.control.ipynb  05c_trainers.wm_tune.ipynb  05c_trainers.world_model.ipynb  06a_utils.__init__.ipynb  06a_utils.checkpointer.ipynb  06b_utils.checkpointer.ipynb  06c_utils.env_utils.ipynb  07_evaluators.control.ipynb  07a_evaluators.control.ipynb  07b_evaluators.jepa.ipynb  07c_evaluators.world_model.ipynb  08a_logger.base.ipynb  08a_planners.mpc.ipynb  09a_planners.mpc.ipynb  index.ipynb  nbdev.yml
(+87 files in other folders)
