[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "c3jepa-wm"
dynamic = ["version"]
description = "Communication Control Co-adaptive JEPA-World Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Ahmed-Khaled-Saleh", email = "ahmedkhaledsaleh11@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/Ahmed-Khaled-Saleh/c3jepa-wm"
Documentation = "https://Ahmed-Khaled-Saleh.github.io/c3jepa-wm/"

[project.entry-points.nbdev]
c3jepa_wm = "c3jepa_wm._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "c3jepa_wm.__version__"}

[tool.setuptools.packages.find]
include = ["c3jepa_wm"]

[tool.nbdev]
